tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_78.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (+ (- ((y DIV 1223) + (- 0))));
               z := (+ (((- 0) + (200 * x)) - (+ (x - 200))));
               p := ((((+ 2) + (- y)) + ((0 + 2) + (2 DIV 0))) <= ((+ (+ z)) MOD (+ (2 MOD 1223))));
               q := ((((z - 0) DIV (- 1223)) - ((1223 + 1) MOD (- 1))) < (- ((0 + y) * (1223 - 2))));
               p := ((((- 2) + (- 200)) MOD ((+ 1223) MOD (2 * z))) # (((+ x) MOD (- 1)) - (+ (- 1223))));
               r := ((((+ x) + (0 MOD 1)) + ((y + 2) MOD (z + 1))) = ((+ (1 DIV 200)) * (- (1223 - 0))));
               z := (+ (- (+ (0 - 1))));
               y := (((- (1 + y)) MOD ((x MOD 2) DIV (1 MOD 0))) MOD ((- (200 + 1223)) DIV ((y DIV 0) + (- y))));
  (* error *)  p := (((- (p DIV z)) >= ((0 + 0) - (200 * y))) & (((0 * z) # (+ x)) OR ((1 # 200) OR (z > x))));
               y := (+ (+ ((+ 0) * (200 DIV y))))
END Test19.